--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px; 
   }
   
   .table-container {
@@ -15,6 +16,8 @@
   th,
   td {
     border: 1px solid lightgray;
+    border-collapse: collapse; 
+    padding: 8px; 
   }
   
   .table-heading {
@@ -35,27 +38,47 @@
     color: green;
   }
   
-  .logout-btn {
+  .logout-btn,
+  .fetch-jokes-btn {
     padding: 10px;
-    align-self: center;
-    margin: 10px;
+    margin: 10px; 
     color: azure;
     font-size: 16px;
     font-weight: bold;
-    background-color: brown;
     border-radius: 10px;
-    margin: 10px;
+  }
+  
+  .logout-btn {
+    background-color: brown;
   }
   
   .fetch-jokes-btn {
-    padding: 10px;
-    align-self: center;
-    margin: 10px;
-    color: azure;
-    font-size: 16px;
-    font-weight: bold;
     background-color: blue;
-    border-radius: 10px;
-    margin: 10px;
+  }
+  
+  
+  
+  
+  @media only screen and (max-width: 600px) {
+    .Home-container,
+    .table-container {
+      width: 90%;
+    }
+  }
+  
+  
+  @media only screen and (min-width: 601px) and (max-width: 1024px) {
+    .Home-container,
+    .table-container {
+      width: 80%;
+    }
+  }
+  
+  
+  @media only screen and (min-width: 1025px) {
+    .Home-container,
+    .table-container {
+      width: 70%;
+    }
   }
   
